lesson-3/kong/kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
spec:
  gatewayClassName: kong
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: '*.testcluster.example'
    allowedRoutes:
      namespaces:
        from: 'All'
    tls:
      mode: Terminate
      certificateRefs:
      - name: testcluster-com-tls
